# lv_demo_truck

./: CMakeLists.txt  lv_conf.defaults
.github/workflows/: torizon.yml
cmake/: dependencies.cmake
cmake/dependencies/: lvgl.cmake
env/torizon/: Dockerfile  docker-compose.yml
src/: lv_demo_truck.c  main.c
ui/: CMakeLists.txt
ui/include/lv_demo_truck/: lv_demo_truck.h
ui/src/: lv_demo_truck.c
